src/oblig2patch/src/tests/oblig2/errors/undeclared_new_argument_fail.cmp
program undeclared_new_argument_fail
begin

    proc main()
    begin
     in
        return new foobar /* Error: argument of new is not declared. */
    end
end